# geo-spider

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.json  config0d7-1.json  config0d8-0d9.json  config0d9-1.json  config1-1d08.json  config1-1d15.json  config1-1d35.json  config1-2.json  config1-3.json  config1d05-1d08.json  config1d07-1d08.json  config1d08-1d15.json  config1d1-1d12.json  config1d12-1d15.json  config1d15-1d35.json  config1d35-1d55.json  config1d35-1d6.json  config1d35-1d7.json  config1d5-2.json  config1d55-1d6.json  config1d6-1d7.json  config1d7-2.json  config2-2d4.json  config2-3.json  config2d4-3.json  config3+.json  config_supplement.json  config_supplement1.json  config_supplement2.json  config_supplement3.json  config_supplement4.json  config_supplement5.json  dmfw-task.example.json  settings.example.yaml
data/: url.txt
data/chars/: hanzi_0d7-1w.txt  hanzi_0d8-0d9.txt  hanzi_0d9-1w.txt  hanzi_1d5-2w.txt  hanzi_1w-1d5.txt  hanzi_1w-1w08.txt  hanzi_1w-1w15.txt  hanzi_1w-1w35.txt  hanzi_1w-2w.txt  hanzi_1w05-1w08.txt  hanzi_1w07-1w08.txt  hanzi_1w08-1w15.txt  hanzi_1w1-1w12.txt  hanzi_1w12-1w15.txt  hanzi_1w15-1w35.txt  hanzi_1w35-1w55.txt  hanzi_1w7-2w.txt  (+8 more)
dmfw_details_spider/: README.md  calibrate.py  cli.py  client.py  config.example.yaml  config.py  launch.py  merge_outputs.py  output_db.py  rate_limit.py  state_db.py  worker.py
scripts/: bench_qps.py  bench_workers.sh  bootstrap_sample_data.py  export_data.py  export_source_ids.py  generate_hanzi.py  run_dmfw_chars.py  run_spider.py
workflow/: project_bootstrap_plan.md
(+96 files in other folders)
