[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geonode-spider"
version = "0.1.0"
description = "Lightweight Python spider for administrative divisions and geocoding."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "jengzang" }
]
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
parser = [
  "lxml>=5.2.0",
]

[project.scripts]
geonode-spider = "geonode_spider.cli:main"
dmfw-detail = "dmfw_details_spider.launch:main"
dmfw-detail-status = "dmfw_details_spider.status:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
